network-policies/worker-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-policies
  labels:
    app: worker-policies
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              service: redis
        - podSelector:
            matchLabels:
              service: postgres
      ports:
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 5432
